Add metadata to file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<meta charset="UTF-8">
+<meta name="description" content="We make games.">
+<meta name="keywords" content="games itch gamejolt blueflamestudios bfs blue flame studios">
+<meta name="author" content="Blue Flame Studios">
 
 <div class="posts">
   {% for post in site.posts %}
