--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 ---
 layout: default
 ---
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="We make games.">
+  <meta name="keywords" content="games bfs blue flame studios blueflamestudios github website itch.io gamejolt games windows console">
+  <meta name="author" content="Blue Flame Studios">
+  <meta name="color" content="blue">
+</head>
 
 <div class="posts">
   {% for post in site.posts %}
